v8/tests/messages/multi-label.out
multi-label.js:1: Uncaught SyntaxError: Label 'mylabel' has already been declared
mylabel: mylabel: return 0;
         ^^^^^^^
