v8/tests/messages/multi-label.js
mylabel: mylabel: return 0;
